# webdev-notes-website

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  vercel.json
api/: app.py  index.py
api/public/: questions.json
api/static/css/: style.css
api/static/js/: script.js
api/templates/: DNS.html  IP_addresses.html  base.html  bootstrap-example.html  data_mining.html  data_packets.html  ecommerce.html  every_page.html  glossary.csv  glossary.html  index.html  interactive.html  internationalisation.html  machine_data.html  metadata.html  privacy.html  pwa.html  search.html  streaming_service_management.html  wai.html  websec.html
src/: app.py  server.py
src/static/css/: style.css
src/templates/: base.html  home-bootstrap.html  index.html  secret.html
templates/: IP_addresses.html  base.html  data_packets.html  feedback.html  home-bootstrap.html  interactive.html  question.html  result.html
